--- a/store.html
+++ b/store.html
@@ -133,7 +133,7 @@
     <!-- Item 1 -->
     <div class="item-card">
         <div class="item-content">
-            <img src="https://ibb.co/zhBKDmcX" alt="Kriss S.V CRB Berserker" class="item-image">
+            <img src="https://i.ibb.co/zhBKDmcX/crb-berserker.png" alt="Kriss S.V CRB Berserker" class="item-image">
             <div class="item-info">
                 <div class="item-name">Kriss S.V CRB Berserker</div>
                 <div class="item-price">Harga: 💬 50,000 WebCoin</div>
@@ -146,7 +146,7 @@
     <!-- Item 2 -->
     <div class="item-card">
         <div class="item-content">
-            <img src="https://ibb.co/fYVJTyht" alt="TT7 Berserker" class="item-image">
+            <img src="https://i.ibb.co/fYVJTyht/t77-berserker.png" alt="TT7 Berserker" class="item-image">
             <div class="item-info">
                 <div class="item-name">TT7 Berserker</div>
                 <div class="item-price">Harga: 💬 50,000 WebCoin</div>
@@ -159,7 +159,7 @@
     <!-- Item 3 -->
     <div class="item-card">
         <div class="item-content">
-            <img src="https://ibb.co/gMxNvrC4" alt="TT7 Shinobi" class="item-image">
+            <img src="https://i.ibb.co/gMxNvrC4/t77ninja.png" alt="TT7 Shinobi" class="item-image">
             <div class="item-info">
                 <div class="item-name">TT7 Shinobi</div>
                 <div class="item-price">Harga: 💬 50,000 WebCoin</div>
@@ -231,13 +231,13 @@
                 
                 if (item.id === 1) {
                     itemName = 'Kriss S.V CRB Berserker';
-                    itemImage = 'https://ibb.co/zhBKDmcX';
+                    itemImage = 'https://i.ibb.co/zhBKDmcX/crb-berserker.png';
                 } else if (item.id === 2) {
                     itemName = 'T77 Berserker';
-                    itemImage = 'https://ibb.co/fYVJTyht';
+                    itemImage = 'https://i.ibb.co/fYVJTyht/t77-berserker.png';
                 } else if (item.id === 3) {
                     itemName = 'T77 Shinobi';
-                    itemImage = 'https://ibb.co/gMxNvrC4';
+                    itemImage = 'https://i.ibb.co/gMxNvrC4/t77ninja.png';
                 }
                 
                 inventoryHTML += `
