--- a/store.html
+++ b/store.html
@@ -171,6 +171,7 @@
         <div class="items-container">
             <!-- Item 1 -->
             <div class="item-card">
+                <img src="https://i.ibb.co/zhBKDmcX/crb-berserker.png">
                 <div class="item-name">Kriss SV CRB Berserker</div>
                 <div class="item-price">Harga: 💬 50,000 WebCoin</div>
                 <div class="item-duration">Durasi: Permanent</div>
