--- a/store.html
+++ b/store.html
@@ -356,7 +356,6 @@
                 name: "Kriss S.V CRB Berserker",
                 price: 50000,
                 image: "https://i.ibb.co/zhBKDmcX/crb-berserker.png",
-                code: "CRB-BERSERKER",
                 description: "Senjata eksklusif dengan damage tinggi"
             },
             {
@@ -364,15 +363,13 @@
                 name: "TT7 Berserker",
                 price: 50000,
                 image: "https://i.ibb.co/fYVJTyht/t77-berserker.png",
-                code: "TT7-BERSERKER",
                 description: "Senjata close-range dengan fire rate tinggi"
             },
             {
                 id: 3,
                 name: "TT7 Shinobi",
                 price: 50000,
-                image: "https://i.ibb.co/gMxNvrC4/t77ninja.png",
-                code: "TT7-SHINOBI",
+                image: "https://i.ibb.co/gMxNvrC4/t77ninja.png"
                 description: "Senjata silent dengan akurasi sempurna"
             }
         ];
