--- a/store.html
+++ b/store.html
@@ -356,24 +356,21 @@
                 name: "Kriss S.V CRB Berserker",
                 price: 50000,
                 image: "https://i.ibb.co/zhBKDmcX/crb-berserker.png",
-                description: "Senjata eksklusif dengan damage tinggi",
-                code: "CRB-BERSERKER"
+                description: "Senjata eksklusif dengan damage tinggi"
             },
             {
                 id: 2,
                 name: "TT7 Berserker",
                 price: 50000,
                 image: "https://i.ibb.co/fYVJTyht/t77-berserker.png",
-                description: "Senjata close-range dengan fire rate tinggi",
-                code: "TT7-BERSERKER"
+                description: "Senjata close-range dengan fire rate tinggi"
             },
             {
                 id: 3,
                 name: "TT7 Shinobi",
                 price: 50000,
                 image: "https://i.ibb.co/gMxNvrC4/t77ninja.png",
-                description: "Senjata silent dengan akurasi sempurna",
-                code: "TT7-SHINOBI"
+                description: "Senjata silent dengan akurasi sempurna"
             }
         ];
 
