--- a/admin.html
+++ b/admin.html
@@ -349,7 +349,7 @@
     </div>
 
     <div class="button-group">
-        <a href="index.html" class="btn btn-primary">
+        <a href="store.html" class="btn btn-primary">
             <i class="btn-icon">🏠</i> Kembali ke Halaman Utama
         </a>
         <button id="logoutBtn" class="btn btn-danger">
