--- a/store.html
+++ b/store.html
@@ -373,6 +373,17 @@
             flex-wrap: wrap;
         }
 
+        /*g*/
+        .admin-btn {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 15px;
+            border-radius: 4px;
+            text-decoration: none;
+            display: inline-block;
+            margin-bottom: 15px;
+        }
+
         /* Redeem Section */
         .redeem-section {
             background-color: var(--secondary-bg);
@@ -575,7 +586,7 @@
                 </div>
             </div>
             <div class="btn-group">
-                <button id="userAdminBtn" class="btn btn-admin" style="display: none;">
+                <button id="admin-btn" class="btn btn-admin" style="display: none;">
                     <span class="btn-icon">👑</span> Admin Panel
                 </button>
                 <button id="userLogoutBtn" class="btn btn-danger">
