--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             const sendButton = document.getElementById('send-button');
             
             // API configuration
-            const API_KEY = 'sk-92af9eeb6dfa430695fce9c3c9622ad5'; // Replace with your actual API key
+            const API_KEY = 'sk'; // Replace with your actual API key
             const API_URL = 'https://api.deepseek.com/v1/chat/completions'; // Verify the correct API endpoint
             
             // Add message to chat
