--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             
             async function fetchLolHumanAPI(message, apiKey) {
                 // Endpoint LolHuman untuk WhatsApp/simsimi (contoh)
-                const endpoint = "https://api.lolhuman.xyz/api/blackbox";
+                const endpoint = "https://api.lolhuman.xyz/api/freefire";
                 
                 try {
                     const response = await fetch(`${endpoint}?apikey=${apiKey}&text=${encodeURIComponent(message)}`);
